hphp/hack/test/full_fidelity/cases/module_newtype_bad2.php
<?hh

module foo;
module type Foo = int; // error
